--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
+
         <plugins>
             <plugin>
                 <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.7.0</version><configuration>
+                <source>7</source>
+                <target>7</target>
+            </configuration>
             </plugin>
 
             <plugin>
@@ -34,7 +38,7 @@
                         </property>
                     </properties>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/tests/ccm/CcmTest_W5.xml</suiteXmlFile>
+                        <suiteXmlFile>selenium_all.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <forkMode>never</forkMode>
                 </configuration>
