--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,26 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <!-- Extent Report -->
+        <!-- http://search.maven.org/#artifactdetails%7Corg.freemarker%7Cfreemarker%7C2.3.28%7Cjar -->
+        <dependency>
+        <groupId>org.freemarker</groupId>
+        <artifactId>freemarker</artifactId>
+        <version>2.3.28</version>
+        </dependency>
+        <!-- http://search.maven.org/#artifactdetails%7Corg.jsoup%7Cjsoup%7C1.11.3%7Cjar -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
+        <!-- http://search.maven.org/#artifactdetails%7Corg.xerial%7Csqlite-jdbc%7C3.23.1%7Cjar -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.23.1</version>
+        </dependency>
     </dependencies>
 </project>
 
