--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
-
         <plugins>
             <plugin>
                 <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
@@ -171,7 +170,7 @@
             <version>1.6.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml - Excel -->
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml - ExceUtility -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
